--- a/style.css
+++ b/style.css
@@ -1,21 +1,48 @@
-  <style>
-            body {
-                background: rgb(125, 198, 205);
-                color: rgb(45, 45, 45);
-                padding: 10px;
-                font-family: arial;
-            }
-            header {
-                font-size: 1.5em;
-                font-weight: bold;
-            }
+
+  
+          #all-contents{
+            max-width:800px;
+            margin:auto;
+            
+        }
+        
+                body{
+            background:rgb(161,250,247);
+            color:rgb(45,45,45);
+            padding:10px;
+            font-family:arial;
+        }
+        header{
+            font-size:1.5em;
+            font-weight:bold;
+        }
+        h1{
+            margin:10px;
+        }
+        #all-contents{
+            max-width:800px;
+            margin:auto;
+            
+        }
+       
+        /* Main container beneath menu */
+ 
+        .content{
+            flex:1;
+            padding:15px;
+        }
+        
+
+        
+        
+        
+        
+  
             [id=all-contents] {
                 max-width: 800px;
                 margin: auto;
             }
-.content{
 
-}
             /* navigation menu */
             nav {
                 background: #000000;
@@ -30,7 +57,6 @@
 				border-top-left-radius: 12px;
 				border-top-right-radius: 12px;
 				color: fff;
-                
             }
             nav header {
                 display: flex;
@@ -64,7 +90,25 @@
 				-moz-border-radius-bottomleft: 6px;
 				border-bottom-right-radius: 6px;
 				border-bottom-left-radius: 6px;
-            }
+        }
+        #portfolio{
+            list-style-image:none;
+            padding-left:0;
+        }
+        #portfolio li{
+            background:#fff;
+            padding:10px;
+            border-radius:10px;
+            margin-bottom:10px;
+        }
+        #portfolio li:hover{
+            background:#eee;
+        }
+        #portfolio a{
+            text-decoration:none;
+            color:#454545;
+            
+        }
             [class=sidebar] {
                 margin-right: 25px;
                 padding: 10px;
@@ -79,4 +123,3 @@
             [class=interests] header {
                 font-size: 1.25em;
             }
-        </style>
